# StrategyDesignPatternCPP

./: CMakeLists.txt  ContextMediaReader.cpp  ContextMediaReader.h  README.md  main.cpp  run.sh
mediaReaders/: HardDriveReader.cpp  HardDriveReader.h  InternetReader.cpp  InternetReader.h  MediaReaderStrategy.h  USBReaderStrategy.cpp  USBReaderStrategy.h
